package ru.k.kbook.features.product.details

object ProductDetailScreenTag {
    const val LOADING = "ProductDetailScreenTag_loading"
    const val TITLE = "ProductDetailScreenTag_name_input"
    const val EDIT_BUTTON = "ProductDetailScreenTag_edit_button"
    const val BACK_BUTTON = "ProductDetailScreenTag_back_button"
    const val CALORICITY = "ProductDetailScreenTag_caloricity_input"
    const val PROTEIN = "ProductDetailScreenTag_protein_input"
    const val FAT = "ProductDetailScreenTag_fat_input"
    const val CARB = "ProductDetailScreenTag_carb_input"
    const val DESCRIPTION = "ProductDetailScreenTag_description_input"
    const val CATEGORY = "ProductDetailScreenTag_category_input"
    const val COOKING_REQUIRED = "ProductDetailScreenTag_cooking_required_input"
    const val IMAGE = "ProductDetailScreenTag_image"
    const val FLAGS = "ProductDetailScreenTag_flags"
    const val CREATE_DATE = "ProductDetailScreenTag_create_date"
    const val UPDATE_DATE = "ProductDetailScreenTag_update_date"
}
