package ru.k.kbook.features.product.create

object ProductCreateScreenTag {
    const val PREFIX = "ProductCreateScreenTag"
    const val SCROLLABLE_COLUMN = "${PREFIX}_scrollable_column"
    const val BACK_BUTTON = "ProductCreateScreenTag_back_button"
    const val REMOVE_IMAGE_BUTTON = "ProductCreateScreenTag_remove_image_button"
    const val ADD_IMAGE_BUTTON = "ProductCreateScreenTag_add_image_button"
    const val SNACKBAR = "ProductCreateScreenTag_snackbar"
    const val NAME_INPUT = "ProductCreateScreenTag_name_input"
    const val CALORICITY_INPUT = "ProductCreateScreenTag_caloricity_input"
    const val PROTEIN_INPUT = "ProductCreateScreenTag_protein_input"
    const val FAT_INPUT = "ProductCreateScreenTag_fat_input"
    const val CARB_INPUT = "ProductCreateScreenTag_carb_input"
    const val DESCRIPTION_INPUT = "ProductCreateScreenTag_description_input"
    const val CATEGORY_INPUT = "ProductCreateScreenTag_category_input"
    const val COOKING_REQUIRED_INPUT = "ProductCreateScreenTag_cooking_required_input"
    const val URL_INPUT = "ProductCreateScreenTag_url_input"
    const val SAVE_BUTTON = "ProductCreateScreenTag_save_product"
}
