package ru.k.kbook.features.product.list

object ProductScreenTag {
    const val PREFIX = "ProductScreenTag"
    const val SCROLLABLE_COLUMN = "${PREFIX}_scrollable_column"
    const val FILTERS_ROW = "${PREFIX}_filters_row"
    const val LOADING = "ProductScreenTag_loading"
    const val ERROR = "ProductScreenTag_error"
    const val CONTENT = "ProductScreenTag_content"
    const val EMPTY = "ProductScreenTag_empty"
    const val PRODUCT_LIST = "ProductScreenTag_product_list"
    const val PRODUCT_CARD = "ProductScreenTag_product_card"
    const val PRODUCT_CARD_TITLE = "ProductScreenTag_product_card_title"
    const val DELETE_PRODUCT_BUTTON = "ProductScreenTag_product_delete_button"
    const val ADD_PRODUCT_FAB = "ProductScreenTag_add_product_fab"
}
