package ru.k.kbook.features.dish

object DishScreenTag {
    const val PREFIX = "DishScreenTag"
    const val CONTENT = "${PREFIX}_content"
    const val CREATE_BUTTON = "${PREFIX}_create_button"
    const val SCROLLABLE_COLUMN = "${PREFIX}_scrollable_column"
    const val CARD = "${PREFIX}_card"
    const val CARD_TITLE = "${PREFIX}_card_title"
    const val CARD_DELETE_BUTTON = "${PREFIX}_card_delete_button"
}
